# tc_qt_widget

./: CMakeLists.txt  click_listener.h  clickable_widget.cpp  clickable_widget.h  custom_tab_btn.cpp  custom_tab_btn.h  round_img_display.cpp  round_img_display.h  single_selected_list.cpp  single_selected_list.h  sized_msg_box.cpp  sized_msg_box.h  tc_base_widget.cpp  tc_base_widget.h  tc_circle_indicator.cpp  tc_circle_indicator.h  tc_custom_titlebar.cpp  tc_custom_titlebar.h  tc_custom_titlebar_dialog.cpp  tc_custom_titlebar_dialog.h  tc_dialog.cpp  tc_dialog.h  tc_dialog_util.cpp  tc_dialog_util.h  tc_font_manager.cpp  tc_font_manager.h  tc_image_button.cpp  tc_image_button.h  tc_label.cpp  tc_label.h  tc_password_input.cpp  tc_password_input.h  tc_pushbutton.cpp  tc_pushbutton.h  tc_qr_widget.cpp  tc_qr_widget.h  tc_tooltip.cpp  tc_tooltip.h  widget_helper.h
image_cropper/: image_cropper_dialog.h  image_cropper_label.cpp  image_cropper_label.h
loadings/: CMakeLists.txt
loadings/winstyle/: baseloadingwidget.cpp  baseloadingwidget.h  win10circleloadingwidget.cpp  win10circleloadingwidget.h  win10horizontalloadingwidget.cpp  win10horizontalloadingwidget.h
notify/: arrangedwnd.cpp  arrangedwnd.h  notify_defs.h  notifymanager.cpp  notifymanager.h  notifywnd.cpp  notifywnd.h
pagination/: page_widget.cpp  page_widget.h  page_widget_ui.h
translator/: CMakeLists.txt  tc_translator.cpp  tc_translator.h
widgetframe/: mainwindow_wrapper.cpp  mainwindow_wrapper.h
